Generate Pelican site

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,17 +4,17 @@
 
         <title>About</title>
         <meta charset="utf-8" />
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Select * from Languages Full Atom Feed" />
+        <link href="http://srthurman.github.io/selectstarfromlanguages/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Select * from Languages Full Atom Feed" />
 
 
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
         <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" type="text/css" href="/theme/gumby.css" />
-        <link rel="stylesheet" type="text/css" href="/theme/style.css" />
-        <link rel="stylesheet" type="text/css" href="/theme/pygment.css" />
+        <link rel="stylesheet" type="text/css" href="http://srthurman.github.io/selectstarfromlanguages/theme/gumby.css" />
+        <link rel="stylesheet" type="text/css" href="http://srthurman.github.io/selectstarfromlanguages/theme/style.css" />
+        <link rel="stylesheet" type="text/css" href="http://srthurman.github.io/selectstarfromlanguages/theme/pygment.css" />
 
-        <script src="/theme/js/libs/modernizr-2.6.2.min.js"></script>
+        <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/libs/modernizr-2.6.2.min.js"></script>
 
 
 
@@ -29,16 +29,16 @@
         <div class="row">
 
           <header id="banner" class="body">
-                  <h1><a href="/">Select * from Languages <strong></strong></a></h1>
+                  <h1><a href="http://srthurman.github.io/selectstarfromlanguages/">Select * from Languages <strong></strong></a></h1>
           </header><!-- /#banner -->
 
             <div id="navigation" class="navbar row">
               <a href="#" gumby-trigger="#navigation &gt; ul" class="toggle"><i class="icon-menu"></i></a>
              
               <ul class="columns">
-                <li><a href="/">Home</a></li>
+                <li><a href="http://srthurman.github.io/selectstarfromlanguages/">Home</a></li>
 
-                <li class="active"><a href="/pages/about.html">About</a></li>
+                <li class="active"><a href="http://srthurman.github.io/selectstarfromlanguages/pages/about.html">About</a></li>
 
               </ul>
             </div>
@@ -84,8 +84,8 @@
     </div>
 
 
-  <script src="/theme/js/libs/jquery-1.9.1.min.js"></script>
-  <script src="/theme/js/libs/gumby.min.js"></script>
-  <script src="/theme/js/plugins.js"></script>
+  <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/libs/jquery-1.9.1.min.js"></script>
+  <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/libs/gumby.min.js"></script>
+  <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/plugins.js"></script>
 </body>
 </html>
