--- a/categories.html
+++ b/categories.html
@@ -4,17 +4,17 @@
 
         <title>Select * from Languages</title>
         <meta charset="utf-8" />
-        <link href="http://srthurman.github.io/selectstarfromlanguages/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Select * from Languages Full Atom Feed" />
+        <link href="http://www.selectstarfromlanguages.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Select * from Languages Full Atom Feed" />
 
 
         <!-- Mobile viewport optimized: j.mp/bplateviewport -->
         <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" type="text/css" href="http://srthurman.github.io/selectstarfromlanguages/theme/gumby.css" />
-        <link rel="stylesheet" type="text/css" href="http://srthurman.github.io/selectstarfromlanguages/theme/style.css" />
-        <link rel="stylesheet" type="text/css" href="http://srthurman.github.io/selectstarfromlanguages/theme/pygment.css" />
+        <link rel="stylesheet" type="text/css" href="http://www.selectstarfromlanguages.com/theme/gumby.css" />
+        <link rel="stylesheet" type="text/css" href="http://www.selectstarfromlanguages.com/theme/style.css" />
+        <link rel="stylesheet" type="text/css" href="http://www.selectstarfromlanguages.com/theme/pygment.css" />
 
-        <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/libs/modernizr-2.6.2.min.js"></script>
+        <script src="http://www.selectstarfromlanguages.com/theme/js/libs/modernizr-2.6.2.min.js"></script>
 
 
 
@@ -29,22 +29,22 @@
         <div class="row">
 
           <header id="banner" class="body">
-                  <h1><a href="http://srthurman.github.io/selectstarfromlanguages/">Select * from Languages <strong></strong></a></h1>
+                  <h1><a href="http://www.selectstarfromlanguages.com/">Select * from Languages <strong></strong></a></h1>
           </header><!-- /#banner -->
 
             <div id="navigation" class="navbar row">
               <a href="#" gumby-trigger="#navigation &gt; ul" class="toggle"><i class="icon-menu"></i></a>
              
               <ul class="columns">
-                <li><a href="http://srthurman.github.io/selectstarfromlanguages/">Home</a></li>
+                <li><a href="http://www.selectstarfromlanguages.com/">Home</a></li>
 
-                <li><a href="http://srthurman.github.io/selectstarfromlanguages/pages/about.html">About</a></li>
+                <li><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
 
               </ul>
             </div>
 
 <ul>
-    <li><a href="http://srthurman.github.io/selectstarfromlanguages/category/review.html">Review</a></li>
+    <li><a href="http://www.selectstarfromlanguages.com/category/review.html">Review</a></li>
 </ul>
 
        </div><!-- /.row -->
@@ -83,8 +83,8 @@
     </div>
 
 
-  <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/libs/jquery-1.9.1.min.js"></script>
-  <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/libs/gumby.min.js"></script>
-  <script src="http://srthurman.github.io/selectstarfromlanguages/theme/js/plugins.js"></script>
+  <script src="http://www.selectstarfromlanguages.com/theme/js/libs/jquery-1.9.1.min.js"></script>
+  <script src="http://www.selectstarfromlanguages.com/theme/js/libs/gumby.min.js"></script>
+  <script src="http://www.selectstarfromlanguages.com/theme/js/plugins.js"></script>
 </body>
 </html>
