--- a/pages/about.html
+++ b/pages/about.html
@@ -73,6 +73,7 @@
 
                 <li><div class="btn primary"><a href="https://github.com/srthurman" target="_blank">Github</a></div></li>
 
+                <li><div class="btn twitter"><a href="https://twitter.com/thurmSR" target="_blank">Twitter</a></div></li>
 
 
 
