--- a/third-post.html
+++ b/third-post.html
@@ -92,7 +92,7 @@
   <h4>Social</h4>
   <ul>
     <li><a href="https://github.com/srthurman">Github</a></li>
-    <li><a href="#">Another social link</a></li>
+    <li><a href="https://twitter.com/thurmSR">Twitter</a></li>
   </ul>
 </nav>
 
@@ -126,6 +126,7 @@
 
                 <li><div class="btn primary"><a href="https://github.com/srthurman" target="_blank">Github</a></div></li>
 
+                <li><div class="btn twitter"><a href="https://twitter.com/thurmSR" target="_blank">Twitter</a></div></li>
 
 
 
