Generate Pelican site

--- a/first-post.html
+++ b/first-post.html
@@ -81,11 +81,16 @@
 
 <h4>Categories</h4>
 <ul>
+		<li><a href="http://www.selectstarfromlanguages.com/category/computers.html">Computers</a></li>
 		<li><a href="http://www.selectstarfromlanguages.com/category/review.html">Review</a></li>
 </ul>
 
 
 <h4>Tags</h4>
+	<ul>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/python.html">python</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/pelican.html">Pelican</a></li>
+</ul>
 
 
 <nav class="widget">
