--- a/categories.html
+++ b/categories.html
@@ -44,6 +44,7 @@
             </div>
 
 <ul>
+    <li><a href="http://www.selectstarfromlanguages.com/category/computers.html">Computers</a></li>
     <li><a href="http://www.selectstarfromlanguages.com/category/review.html">Review</a></li>
 </ul>
 
