--- a/tags.html
+++ b/tags.html
@@ -45,6 +45,16 @@
 
 <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/python.html">
+		<i class="icon-tag icon-large"></i>python
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/pelican.html">
+		<i class="icon-tag icon-large"></i>Pelican
+	</a>
+</li>
 </ul>
 
        </div><!-- /.row -->
