Generate Pelican site

--- a/learning-lang-equals-learning-lang.html
+++ b/learning-lang-equals-learning-lang.html
@@ -107,13 +107,17 @@
 
 <h4>Categories</h4>
 <ul>
+		<li><a href="http://www.selectstarfromlanguages.com/category/misc.html">misc</a></li>
 		<li><a href="http://www.selectstarfromlanguages.com/category/science.html">Science!</a></li>
 </ul>
 
 
 <h4>Tags</h4>
 	<ul>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/language-learning.html">language learning</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/anki.html">anki</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/french.html">french</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">computer language</a></li>
+	    <li class="tag-1"><a href="http://www.selectstarfromlanguages.com/tag/human-language.html">human language</a></li>
 </ul>
 
 
