--- a/tags.html
+++ b/tags.html
@@ -46,8 +46,23 @@
 <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
 <li class="tag-4">
-	<a href="http://www.selectstarfromlanguages.com/tag/language-learning.html">
-		<i class="icon-tag icon-large"></i>language learning
+	<a href="http://www.selectstarfromlanguages.com/tag/anki.html">
+		<i class="icon-tag icon-large"></i>anki
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/french.html">
+		<i class="icon-tag icon-large"></i>french
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">
+		<i class="icon-tag icon-large"></i>computer language
+	</a>
+</li>
+<li class="tag-1">
+	<a href="http://www.selectstarfromlanguages.com/tag/human-language.html">
+		<i class="icon-tag icon-large"></i>human language
 	</a>
 </li>
 </ul>
