--- a/archives.html
+++ b/archives.html
@@ -46,6 +46,8 @@
 <h1>Archives for Select * from Languages</h1>
 
 <dl>
+    <dt>Sun 29 March 2015</dt>
+    <dd><a href="http://www.selectstarfromlanguages.com/how_im_learning_french.html">Plan of attack for learning French</a></dd>
     <dt>Sat 21 March 2015</dt>
     <dd><a href="http://www.selectstarfromlanguages.com/learning-lang-equals-learning-lang.html">Learning programming == learning foreign language?</a></dd>
 </dl>
