--- a/categories.html
+++ b/categories.html
@@ -44,6 +44,7 @@
             </div>
 
 <ul>
+    <li><a href="http://www.selectstarfromlanguages.com/category/misc.html">misc</a></li>
     <li><a href="http://www.selectstarfromlanguages.com/category/science.html">Science!</a></li>
 </ul>
 
