Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -45,6 +45,16 @@
 
 <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
+<li class="tag-1">
+	<a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">
+		<i class="icon-tag icon-large"></i>computer language
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/python.html">
+		<i class="icon-tag icon-large"></i>Python
+	</a>
+</li>
 <li class="tag-4">
 	<a href="http://www.selectstarfromlanguages.com/tag/anki.html">
 		<i class="icon-tag icon-large"></i>anki
@@ -56,8 +66,13 @@
 	</a>
 </li>
 <li class="tag-4">
-	<a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">
-		<i class="icon-tag icon-large"></i>computer language
+	<a href="http://www.selectstarfromlanguages.com/tag/java.html">
+		<i class="icon-tag icon-large"></i>java
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/object-oriented.html">
+		<i class="icon-tag icon-large"></i>object oriented
 	</a>
 </li>
 <li class="tag-1">
