Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -46,6 +46,8 @@
 <h1>Archives for Select * from Languages</h1>
 
 <dl>
+    <dt>Sat 09 May 2015</dt>
+    <dd><a href="http://www.selectstarfromlanguages.com/tdd_duolingo_and_pep8_ohmy.html">TDD, using Duolingo, and PEP8 formatting</a></dd>
     <dt>Sun 12 April 2015</dt>
     <dd><a href="http://www.selectstarfromlanguages.com/oo_principles_Python.html">Object Oriented Principles Part 1: Python</a></dd>
     <dt>Sun 29 March 2015</dt>
