--- a/categories.html
+++ b/categories.html
@@ -46,6 +46,7 @@
 <ul>
     <li><a href="http://www.selectstarfromlanguages.com/category/misc.html">misc</a></li>
     <li><a href="http://www.selectstarfromlanguages.com/category/science.html">Science!</a></li>
+    <li><a href="http://www.selectstarfromlanguages.com/category/weekly-roundup.html">Weekly Roundup</a></li>
 </ul>
 
        </div><!-- /.row -->
