--- a/learning-lang-equals-learning-lang.html
+++ b/learning-lang-equals-learning-lang.html
@@ -109,18 +109,21 @@
 <ul>
 		<li><a href="http://www.selectstarfromlanguages.com/category/misc.html">misc</a></li>
 		<li><a href="http://www.selectstarfromlanguages.com/category/science.html">Science!</a></li>
+		<li><a href="http://www.selectstarfromlanguages.com/category/weekly-roundup.html">Weekly Roundup</a></li>
 </ul>
 
 
 <h4>Tags</h4>
 	<ul>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/french.html">french</a></li>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/object-oriented.html">object oriented</a></li>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/anki.html">anki</a></li>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/java.html">java</a></li>
 	    <li class="tag-1"><a href="http://www.selectstarfromlanguages.com/tag/human-language.html">human language</a></li>
 	    <li class="tag-1"><a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">computer language</a></li>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/python.html">Python</a></li>
+	    <li class="tag-2"><a href="http://www.selectstarfromlanguages.com/tag/python.html">python</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/object-oriented.html">object oriented</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/tdd.html">tdd</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/anki.html">anki</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/java.html">java</a></li>
+	    <li class="tag-2"><a href="http://www.selectstarfromlanguages.com/tag/french.html">french</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/testing.html">testing</a></li>
 </ul>
 
 
