Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -39,6 +39,7 @@
                 <li><a href="http://www.selectstarfromlanguages.com/">Home</a></li>
 
                 <li><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
+                <li><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
 
               </ul>
             </div>
@@ -46,6 +47,10 @@
 <h1>Archives for Select * from Languages</h1>
 
 <dl>
+    <dt>Sun 31 May 2015</dt>
+    <dd><a href="http://www.selectstarfromlanguages.com/java_adf_and_learning_styles.html">Java ADF and Learning Styles</a></dd>
+    <dt>Sun 24 May 2015</dt>
+    <dd><a href="http://www.selectstarfromlanguages.com/west_coast_adventures_in_programming.html">Meeting and Talking to People about Tech</a></dd>
     <dt>Sat 09 May 2015</dt>
     <dd><a href="http://www.selectstarfromlanguages.com/tdd_duolingo_and_pep8_ohmy.html">TDD, using Duolingo, and PEP8 formatting</a></dd>
     <dt>Sun 12 April 2015</dt>
