--- a/authors.html
+++ b/authors.html
@@ -39,13 +39,14 @@
                 <li><a href="http://www.selectstarfromlanguages.com/">Home</a></li>
 
                 <li><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
+                <li><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
 
               </ul>
             </div>
 
     <h1>Authors on Select * from Languages</h1>
 
-    <ul>        <li><a href="http://www.selectstarfromlanguages.com/author/sara-thurman.html">Sara Thurman</a> (4)</li>
+    <ul>        <li><a href="http://www.selectstarfromlanguages.com/author/sara-thurman.html">Sara Thurman</a> (6)</li>
     </ul>
 
        </div><!-- /.row -->
