--- a/drafts/reading-computer-books.html
+++ b/drafts/reading-computer-books.html
@@ -40,6 +40,7 @@
                 <li><a href="http://www.selectstarfromlanguages.com/">Home</a></li>
 
                 <li><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
+                <li><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
 
               </ul>
             </div>
@@ -79,6 +80,7 @@
 
  <ul>
       <li><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
+      <li><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
   </ul>
 
 <h4>Categories</h4>
@@ -91,15 +93,18 @@
 
 <h4>Tags</h4>
 	<ul>
-	    <li class="tag-1"><a href="http://www.selectstarfromlanguages.com/tag/human-language.html">human language</a></li>
-	    <li class="tag-1"><a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">computer language</a></li>
-	    <li class="tag-2"><a href="http://www.selectstarfromlanguages.com/tag/python.html">python</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/networking.html">networking</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/portland.html">portland</a></li>
 	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/object-oriented.html">object oriented</a></li>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/tdd.html">tdd</a></li>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/anki.html">anki</a></li>
-	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/java.html">java</a></li>
 	    <li class="tag-2"><a href="http://www.selectstarfromlanguages.com/tag/french.html">french</a></li>
+	    <li class="tag-2"><a href="http://www.selectstarfromlanguages.com/tag/python.html">python</a></li>
+	    <li class="tag-2"><a href="http://www.selectstarfromlanguages.com/tag/java.html">java</a></li>
+	    <li class="tag-1"><a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">computer language</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/anki.html">anki</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/tdd.html">tdd</a></li>
 	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/testing.html">testing</a></li>
+	    <li class="tag-4"><a href="http://www.selectstarfromlanguages.com/tag/seattle.html">seattle</a></li>
+	    <li class="tag-1"><a href="http://www.selectstarfromlanguages.com/tag/human-language.html">human language</a></li>
 </ul>
 
 
