--- a/pages/about.html
+++ b/pages/about.html
@@ -39,6 +39,7 @@
                 <li><a href="http://www.selectstarfromlanguages.com/">Home</a></li>
 
                 <li class="active"><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
+                <li><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
 
               </ul>
             </div>
