--- a/pages/resources.html
+++ b/pages/resources.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-        <title>Select * from Languages</title>
+        <title>Resources</title>
         <meta charset="utf-8" />
         <link href="http://www.selectstarfromlanguages.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Select * from Languages Full Atom Feed" />
 
@@ -39,16 +39,15 @@
                 <li><a href="http://www.selectstarfromlanguages.com/">Home</a></li>
 
                 <li><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
-                <li><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
+                <li class="active"><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
 
               </ul>
             </div>
 
-<ul>
-    <li><a href="http://www.selectstarfromlanguages.com/category/misc.html">misc</a></li>
-    <li><a href="http://www.selectstarfromlanguages.com/category/science.html">Science!</a></li>
-    <li><a href="http://www.selectstarfromlanguages.com/category/weekly-roundup.html">Weekly Roundup</a></li>
-</ul>
+    <h1>Resources</h1>
+    
+
+    <p>Coming Soon!</p>
 
        </div><!-- /.row -->
     </div><!-- /.container -->
