--- a/tags.html
+++ b/tags.html
@@ -39,25 +39,21 @@
                 <li><a href="http://www.selectstarfromlanguages.com/">Home</a></li>
 
                 <li><a href="http://www.selectstarfromlanguages.com/pages/about.html">About</a></li>
+                <li><a href="http://www.selectstarfromlanguages.com/pages/resources.html">Resources</a></li>
 
               </ul>
             </div>
 
 <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
-<li class="tag-1">
-	<a href="http://www.selectstarfromlanguages.com/tag/human-language.html">
-		<i class="icon-tag icon-large"></i>human language
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/networking.html">
+		<i class="icon-tag icon-large"></i>networking
 	</a>
 </li>
-<li class="tag-1">
-	<a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">
-		<i class="icon-tag icon-large"></i>computer language
-	</a>
-</li>
-<li class="tag-2">
-	<a href="http://www.selectstarfromlanguages.com/tag/python.html">
-		<i class="icon-tag icon-large"></i>python
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/portland.html">
+		<i class="icon-tag icon-large"></i>portland
 	</a>
 </li>
 <li class="tag-4">
@@ -65,9 +61,24 @@
 		<i class="icon-tag icon-large"></i>object oriented
 	</a>
 </li>
-<li class="tag-4">
-	<a href="http://www.selectstarfromlanguages.com/tag/tdd.html">
-		<i class="icon-tag icon-large"></i>tdd
+<li class="tag-2">
+	<a href="http://www.selectstarfromlanguages.com/tag/french.html">
+		<i class="icon-tag icon-large"></i>french
+	</a>
+</li>
+<li class="tag-2">
+	<a href="http://www.selectstarfromlanguages.com/tag/python.html">
+		<i class="icon-tag icon-large"></i>python
+	</a>
+</li>
+<li class="tag-2">
+	<a href="http://www.selectstarfromlanguages.com/tag/java.html">
+		<i class="icon-tag icon-large"></i>java
+	</a>
+</li>
+<li class="tag-1">
+	<a href="http://www.selectstarfromlanguages.com/tag/computer-language.html">
+		<i class="icon-tag icon-large"></i>computer language
 	</a>
 </li>
 <li class="tag-4">
@@ -76,18 +87,23 @@
 	</a>
 </li>
 <li class="tag-4">
-	<a href="http://www.selectstarfromlanguages.com/tag/java.html">
-		<i class="icon-tag icon-large"></i>java
-	</a>
-</li>
-<li class="tag-2">
-	<a href="http://www.selectstarfromlanguages.com/tag/french.html">
-		<i class="icon-tag icon-large"></i>french
+	<a href="http://www.selectstarfromlanguages.com/tag/tdd.html">
+		<i class="icon-tag icon-large"></i>tdd
 	</a>
 </li>
 <li class="tag-4">
 	<a href="http://www.selectstarfromlanguages.com/tag/testing.html">
 		<i class="icon-tag icon-large"></i>testing
+	</a>
+</li>
+<li class="tag-4">
+	<a href="http://www.selectstarfromlanguages.com/tag/seattle.html">
+		<i class="icon-tag icon-large"></i>seattle
+	</a>
+</li>
+<li class="tag-1">
+	<a href="http://www.selectstarfromlanguages.com/tag/human-language.html">
+		<i class="icon-tag icon-large"></i>human language
 	</a>
 </li>
 </ul>
