Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -47,6 +47,8 @@
 <h1>Archives for Select * from Languages</h1>
 
 <dl>
+    <dt>Mon 25 January 2016</dt>
+    <dd><a href="http://www.selectstarfromlanguages.com/i_love_the_library.html">I love the library</a></dd>
     <dt>Sun 04 October 2015</dt>
     <dd><a href="http://www.selectstarfromlanguages.com/urbanization_and_gender_data_management.html">Effects of Urbanization on Gender Equality: Part 3</a></dd>
     <dt>Sun 27 September 2015</dt>
