--- a/pages/resources.html
+++ b/pages/resources.html
@@ -47,7 +47,29 @@
     <h1>Resources</h1>
     
 
-    <p>Coming Soon!</p>
+    <h2>Tech</h2>
+<ul>
+<li>
+<p><a href="https://www.pluralsight.com/">Pluralsight</a></p>
+</li>
+<li>
+<p><a href="https://teamtreehouse.com/">Treehouse</a></p>
+</li>
+</ul>
+<h2>Foreign Language</h2>
+<ul>
+<li><a href="https://fluent-forever.com/">Fluent Forever</a></li>
+<li><a href="https://www.duolingo.com/">Duolingo</a></li>
+</ul>
+<h2>General Learning</h2>
+<ul>
+<li><a href="https://dclibrary.org/research/databases">District of Columbia Online Database Collection</a><ul>
+<li><a href="https://www.lynda.com/portal/sip?org=dclibrary.org">Lynda.com</a></li>
+<li><a href="https://login.dclibrary.idm.oclc.org/login?qurl=http%3a%2f%2fproquestpubliclibrary.safaribooksonline.com">Safari Books Online</a></li>
+<li><a href="https://login.dclibrary.idm.oclc.org/login?qurl=http%3a%2f%2fDC.universalclass.com%2fregister.htm">Universal Class</a></li>
+</ul>
+</li>
+</ul>
 
        </div><!-- /.row -->
     </div><!-- /.container -->
